# crane_sim

./: .gitignore  pyproject.toml  run.py  run_all.bat
config/: crane.yaml
crane_sim/cli/: cli.py
crane_sim/config/: config.py
crane_sim/controllers/: __init__.py  controller_manager.py  plc_controller.py  xbox_controller.py
crane_sim/core/: axis_controller.py  joint_mapper.py  mujoco_model.py  state.py
crane_sim/runtime/: sim_loop.py
models/: bridge_crane.xml  crane.xml
models/asset/: crane.stl  grab.stl  grabber.stl  trolley.stl
test_scripts/: analyze_recorded_data.py  offline_path.py  plot.py  record_data.py
